<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Recipes</string>
    <string name="navigation_drawer_header_title" translatable="false">Recipes</string>

    <!-- Translatable resources -->
    <string name="filter" translation_description="Common Filter">Filter</string>
    <string name="grid" translation_description="Common Filter">Switch between grid and list</string>
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
    <string name="santa_claus_quote">Santa Claus will consider this request</string>
    <string name="menu_item_share" translation_description="The label for the Share menu item">Share</string>
    <string name="number_of_parts">Number of parts: %d</string>
    <string name="year">Year: %d</string>

    <!-- Accessibility -->
    <string name="settings" translatable="false">settings</string>
    <string name="category_image" translatable="false">category image</string>
    <string name="meal_image" translatable="false">meal image</string>
    <string name="instructions" translatable="false">1. Steps for the Meat: \r\n Roast meat over medium heat for 50 minutes and salt it as you turn it.\r\n\r\n2. Steps for Ugali:\r\nBring the water and salt to a boil in a heavy-bottomed saucepan. Stir in the cornmeal slowly, letting it fall through the fingers of your hand.\r\n\r\n3. Reduce heat to medium-low and continue stirring regularly, smashing any lumps with a spoon, until the mush pulls away from the sides of the pot and becomes very thick, about 10 minutes.\r\n\r\n4.Remove from heat and allow to cool.\r\n\r\n5. Place the ugali into a large serving bowl. Wet your hands with water, form a ball and serve.\r\n\r\n6. Steps for Kachumbari: Mix the tomatoes, onions, chili and coriander leaves in a bowl.\r\n\r\n7. Serve and enjoy!
Serve with Naan. </string>
    <string name="meal_name">Meal name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructionsTitle">Instructions</string>

</resources>
